--- a/github/cloudformation/gh-actions-role.yaml
+++ b/github/cloudformation/gh-actions-role.yaml
@@ -102,6 +102,34 @@ Resources:
                   - !Sub "arn:aws:s3:::${SamDeploymentBucketPattern}/*"
                   - !Sub "arn:aws:s3:::${SamManagedBucketPattern}"
                   - !Sub "arn:aws:s3:::${SamManagedBucketPattern}/*"
+              # S3 permissions for application buckets (website bucket, etc.)
+              - Effect: Allow
+                Action:
+                  # S3 bucket configuration actions needed for CloudFormation to manage bucket properties
+                  - s3:PutEncryptionConfiguration
+                  - s3:GetEncryptionConfiguration
+                  - s3:PutBucketVersioning
+                  - s3:GetBucketVersioning
+                  - s3:PutBucketPublicAccessBlock
+                  - s3:GetBucketPublicAccessBlock
+                  - s3:PutBucketPolicy
+                  - s3:GetBucketPolicy
+                  - s3:DeleteBucketPolicy
+                  - s3:PutBucketAcl
+                  - s3:GetBucketAcl
+                  - s3:CreateBucket
+                  - s3:DeleteBucket
+                  - s3:ListBucket
+                  - s3:GetBucketLocation
+                  - s3:PutObject
+                  - s3:GetObject
+                  - s3:DeleteObject
+                  - s3:ListBucketMultipartUploads
+                  - s3:AbortMultipartUpload
+                Resource:
+                  # Allow these actions on application buckets (pattern matches stack-named buckets)
+                  - "arn:aws:s3:::tv-event-streaming-gha-*"
+                  - "arn:aws:s3:::tv-event-streaming-gha-*/*"
 
 Outputs:
   GitHubActionsRoleArn:
