--- a/cloudformation/uktv-event-streaming-app.yaml
+++ b/cloudformation/uktv-event-streaming-app.yaml
@@ -106,6 +106,17 @@ Resources:
               - kms:Decrypt
               - kms:GenerateDataKey
             Resource: "*"
+          - Sid: Allow CloudFront to use the key
+            Effect: Allow
+            Principal:
+              Service: cloudfront.amazonaws.com
+            Action:
+              - kms:Decrypt
+              - kms:GenerateDataKey
+            Resource: "*"
+            Condition:
+              StringEquals:
+                AWS:SourceAccount: !Ref AWS::AccountId
 
   S3EncryptionKeyAlias:
     Type: AWS::KMS::Alias
