--- a/cloudformation/web-api.yaml
+++ b/cloudformation/web-api.yaml
@@ -28,8 +28,8 @@ Resources:
       StageName: !Ref StageName
       # Domain configuration removed - custom domains not currently used
       # To enable custom domain, uncomment and provide ApiDomainName and ApiCertificateArn:
-      # Domain:
-      #   SecurityPolicy: TLS_1_2
+      Domain:
+        SecurityPolicy: TLS_1_2
       #   DomainName: !Ref ApiDomainName
       #   CertificateArn: !Ref ApiCertificateArn
       Auth:
